v1.0.0/_sources/gallery/index.rst.txt
:orphan:

.. _gallery:

Gallery
=======

This gallery contains a selection examples of what Verde can do.



.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="When gridding data that has been highly oversampled in a direction (shipborne and airborne data...">

.. only:: html

    .. figure:: /gallery/images/thumb/sphx_glr_blockreduce_thumb.png

        :ref:`sphx_glr_gallery_blockreduce.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/blockreduce

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Sometimes data has outliers or less reliable points that might skew a blocked mean or even a me...">

.. only:: html

    .. figure:: /gallery/images/thumb/sphx_glr_blockreduce_weights_thumb.png

        :ref:`sphx_glr_gallery_blockreduce_weights.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/blockreduce_weights

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip=":class:`verde.BlockReduce` is not able to output weights because we need to make assumptions ab...">

.. only:: html

    .. figure:: /gallery/images/thumb/sphx_glr_blockreduce_weights_mean_thumb.png

        :ref:`sphx_glr_gallery_blockreduce_weights_mean.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/blockreduce_weights_mean

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Sometimes, data points are unevenly distributed. In such cases, we might not want to have inter...">

.. only:: html

    .. figure:: /gallery/images/thumb/sphx_glr_distance_mask_thumb.png

        :ref:`sphx_glr_gallery_distance_mask.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/distance_mask

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Scipy offers a range of interpolation methods in :mod:`scipy.interpolate` and 3 specifically fo...">

.. only:: html

    .. figure:: /gallery/images/thumb/sphx_glr_scipygridder_thumb.png

        :ref:`sphx_glr_gallery_scipygridder.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/scipygridder

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Biharmonic spline interpolation is based on estimating vertical forces acting on an elastic she...">

.. only:: html

    .. figure:: /gallery/images/thumb/sphx_glr_spline_thumb.png

        :ref:`sphx_glr_gallery_spline.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/spline

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="An advantage of using the Green&#x27;s functions based :class:`verde.Spline` over :class:`verde.Scip...">

.. only:: html

    .. figure:: /gallery/images/thumb/sphx_glr_spline_weights_thumb.png

        :ref:`sphx_glr_gallery_spline_weights.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/spline_weights

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Verde offers the :class:`verde.Trend` class to fit a 2D polynomial trend to your data. This can...">

.. only:: html

    .. figure:: /gallery/images/thumb/sphx_glr_trend_thumb.png

        :ref:`sphx_glr_gallery_trend.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/trend

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Verde provides the :class:`verde.Trend` class to estimate a polynomial trend and the :class:`ve...">

.. only:: html

    .. figure:: /gallery/images/thumb/sphx_glr_vector_trend_thumb.png

        :ref:`sphx_glr_gallery_vector_trend.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/vector_trend

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="We can use :class:`verde.Vector` to simultaneously process and grid all components of vector da...">

.. only:: html

    .. figure:: /gallery/images/thumb/sphx_glr_vector_uncoupled_thumb.png

        :ref:`sphx_glr_gallery_vector_uncoupled.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/vector_uncoupled

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="One way of gridding vector data would be grid each component separately using :class:`verde.Spl...">

.. only:: html

    .. figure:: /gallery/images/thumb/sphx_glr_vectorspline2d_thumb.png

        :ref:`sphx_glr_gallery_vectorspline2d.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/vectorspline2d
.. raw:: html

    <div style='clear:both'></div>



.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
